--- a/location.html
+++ b/location.html
@@ -91,15 +91,15 @@
                     </li>
                     <li>
                         <h3>姓名*</h3>
-                        <input type="text" style= "border-radius:20px" >
+                        <input type="text"  >
                     </li>
                     <li>
                         <h3>Email*</h3>
-                        <input type="text" id="mail" style= "border-radius:20px" >
+                        <input type="text" id="mail"  >
                     </li>
                     <li>
                         <h3>留言*</h3>
-                        <textarea name="texteara" id="" cols="30" rows="10"style= "border-radius:20px"></textarea>
+                        <textarea name="texteara" id="" cols="30" rows="10"></textarea>
 
                     </li>
                     <li>
