--- a/index.html
+++ b/index.html
@@ -89,14 +89,18 @@
         <h1>優惠活動</h1>
         <!-- ------ -------- 優惠活動圖片 --------   -->
         <section class="promo-banner">
-            <div class="nav-pr">
-
-                <a href="promo.html">
-                    <img src="img/dis1.jpg" alt="">
-                    <img src="img/dis2.jpg" alt="">
-                </a>
+            <div class="promo-right">
+                    <a href="promo.html">
+                        <img src="img/dis1.jpg" alt="">
+                    </a>
             </div>
 
+            <div class="promo-left">
+                <a href="promo.html">
+                    <img src="img/dis2.jpg" alt="">
+                </a>
+               
+            </div>
 
         </section>
         <!-- ---------- 新品上市活動圖片---------- -->
@@ -449,7 +453,7 @@
 
                 </div>
             <!--  ----------footer 右邊info區 ----------   -->
-            
+
                 <div class="info-right">
 
                     <ul>
