--- a/product.html
+++ b/product.html
@@ -380,72 +380,82 @@
 
 
     <!--          footer區    -->
-    <footer>
+     <footer>
         <div class="container_footer">
-            <!--          footer 左邊logo區    -->
-            <div class="logo-container">
+            <div class="footer-area">
 
-                <img src="img/logo2.png" alt="">
+                <!-- ----------  footer 左邊logo區 ----------   -->
 
-                <ul>
+                <div class="logo-container">
 
-                    <li class="btn1">
-                        <i class="bi bi-whatsapp">
-                            +886-905242197
-                        </i>
 
-                    </li>
-                    <li class="btn1">
-                        <i class="bi bi-envelope">
-                            easy3cshop@hotmail.com
-                        </i>
+                    <img src="img/logo2.png" alt="">
 
-                    </li>
+                    <ul>
 
-                    <li class="btn1">
-                        <i class="bi bi-geo-alt">
-                            9F., No. 46, Fuxing Rd., Zhongli Dist.,Taoyuan City 320061, Taiwan (R.O.C.)
-                        </i>
+                        <li class="btn1">
+                            <i class="bi bi-whatsapp">
+                                +886-905242197
+                            </i>
 
-                    </li>
-                </ul>
+                        </li>
+                        <li class="btn1">
+                            <i class="bi bi-envelope">
+                                easy3cshop@hotmail.com
+                            </i>
+
+                        </li>
+
+                        <li class="btn1">
+                            <i class="bi bi-geo-alt">
+                                9F., No. 46, Fuxing Rd., Zhongli Dist.,Taoyuan City 320061, Taiwan (R.O.C.)
+                            </i>
+
+                        </li>
+                    </ul>
+
+                </div>
+            <!--  ----------footer 右邊info區 ----------   -->
+
+                <div class="info-right">
+
+                    <ul>
+                        <li>
+                            <h2>關於我們</h2>
+                            <h3>商店簡介</h3>
+                            <a href="info.html">
+                                <h3>購物說明</h3>
+                            </a>
+                            <a href="location.html">
+                                <h3>聯絡我們</h3>
+                            </a>
+
+                        </li>
+                        <li>
+                            <h2>線上客服</h2>
+                            <h3>掃描加 LINE，獲取專人服務</h3>
+                            <h3>週一至週日 9:00 - 17:30</h3>
+                            <h3>午休時間 12:00 - 14:00</h3>
+                        </li>
+
+
+                        <img src="img/icon/qrcode1.svg" alt="">
+                    </ul>
+                </div>
+            </div>
+
+            <div class="ref">
+
+                <p>本網站為緯育TibaMe_前端設計工程師班學員專題成果作品，本平台僅供學習、展示之用。<br>
+                    若有侵權疑慮，您可以私訊「TibaMe-前端設計工程師養成班」，後續會由專人協助處理。<br>
+                    COPYRIGHT © 2022 EZ3C Co.,Ltd. All rights reserved.
+                </p>
 
             </div>
-            <!--          footer 右邊info區    -->
-            <div class="info-right">
 
-                <ul>
-                    <li>
-                        <h2>關於我們</h2>
-                        <h3>商店簡介</h3>
-                        <a href="info.html">
-                            <h3>購物說明</h3>
-                        </a>
-                        <a href="location.html">
-                            <h3>聯絡我們</h3>
-                        </a>
-                    </li>
-                    <li>
-                        <h2>線上客服</h2>
-                        <h3>掃描加 LINE，獲取專人服務</h3>
-                        <h3>週一至週日 9:00 - 17:30</h3>
-                        <h3>午休時間 12:00 - 14:00</h3>
-                    </li>
-
-                    <img src="img/icon/qrcode1.svg" alt="">
-                </ul>
-            </div>
-        </div>
-        <div class="ref">
-
-            <p>本網站為緯育TibaMe_前端設計工程師班學員專題成果作品，本平台僅供學習、展示之用。<br>
-                若有侵權疑慮，您可以私訊「TibaMe-前端設計工程師養成班」，後續會由專人協助處理。<br>
-                COPYRIGHT © 2022 EZ3C Co.,Ltd. All rights reserved.
-            </p>
 
         </div>
-
-
+            
     </footer>
 
 
