--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="css/header&footer.css">
     <link rel="stylesheet" href="css/style.css">
     <link rel="stylesheet" href="css/owl.carousel.min.css">
     <link rel="stylesheet" href="css/owl.theme.default.css">
@@ -550,28 +551,28 @@
 
             <ul class="video-control">
                 <li>
-                    <iframe width="300" height="250" src="https://www.youtube.com/embed/7j2TPdBfZDY"
+                    <iframe width="100%" height="100%" src="https://www.youtube.com/embed/7j2TPdBfZDY"
                         title="YouTube video player" frameborder="0"
                         allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
                         allowfullscreen></iframe>
 
                 </li>
                 <li>
-                    <iframe width="300" height="250" src="https://www.youtube.com/embed/8tTn0rS3DUk"
+                    <iframe width="100%" height="100%" src="https://www.youtube.com/embed/8tTn0rS3DUk"
                         title="YouTube video player" frameborder="0"
                         allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
                         allowfullscreen></iframe>
 
                 </li>
                 <li>
-                    <iframe width="300" height="250" src="https://www.youtube.com/embed/LU7tTZPYpoc"
+                    <iframe width="100%" height="100%" src="https://www.youtube.com/embed/LU7tTZPYpoc"
                         title="YouTube video player" frameborder="0"
                         allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
                         allowfullscreen></iframe>
 
                 </li>
                 <li>
-                    <iframe width="300" height="250" src="https://www.youtube.com/embed/xbX3VbHCOnc"
+                    <iframe width="100%" height="100%" src="https://www.youtube.com/embed/xbX3VbHCOnc"
                         title="YouTube video player" frameborder="0"
                         allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
                         allowfullscreen></iframe>
@@ -600,7 +601,7 @@
                 <div class="logo-container">
 
 
-                    <img src="img/logo2.png" alt="">
+                    <img  class="footer_logo" src="img/logo2.png" alt="">
 
                     <ul>
 
