--- a/product-dt.html
+++ b/product-dt.html
@@ -16,7 +16,7 @@
     <nav class="header">
 
 
-        <!--------------    logo 圖片  ------------  -->
+        <!--------------logo 圖片------------  -->
 
         <div class="header-wrapper">
 
@@ -24,7 +24,7 @@
                 <img class="logo" src="img/logo1.png" alt="">
             </a>
 
-            <!----------  主選單----------    -->
+            <!----------  主選單------------>
 
             <div class="hamBar_wrapper">
                 <a class="hamBar" href="#">
@@ -43,32 +43,37 @@
 
                     <li class="nav-item"><a href="location.html">聯絡我們</a></li>
 
-                    <ul class="top-icon">
-                        <li>
-                            <a href="#" class="btn-default">
-                                <i class="bi bi-search"></i>
-                            </a>
-                        </li>
-
-                        <li>
-                            <a href="#" class="btn-default">
-                                <i class="bi bi-cart"></i>
-                            </a>
-                        </li>
-
-                        <li>
-                            <a href="#" class="btn-default">
-                                <i class="bi bi-person"></i>
-                            </a>
-                        </li>
-                    </ul>
-
                 </ul>
             </section>
+
+            <!---------------three icon ---------------->
+            <ul class="hn-function flex-cc">
+                <li class="hn-search">
+                    <form action="#" class="desktop-search">
+                        <input type="text"  placeholder="找商品" name="search">
+                        <button type="submit">
+                            <i class="bi bi-search "></i>
+                        </button>
+                    </form>
+                    
+                </li>
+
+                <li>
+                    <a href="#" class="btn-default">
+                    <i class="bi bi-cart"></i>
+                    </a>
+                </li>
+
+                <li>
+                    <a href="#" class="btn-default">
+                    <i class="bi bi-person"></i>
+                    </a>
+                </li>
+            </ul>
         </div>
     </nav>
 
-    <!--    banner看板     -->
+    <!--  ------------ banner看板-------------->
 
 
     <div class="pdinfo-container">
@@ -304,7 +309,7 @@
 
 
 
-    <!--          footer區    -->
+    <!-------------- footer區------------ -->
     <footer>
         <div class="container_footer">
             <div class="footer-area">
