--- a/product.html
+++ b/product.html
@@ -7,6 +7,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="css/style.css">
     <link rel="stylesheet" href="css/header&footer.css">
+    <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.9.0/font/bootstrap-icons.css">
     <title>product</title>
 </head>
@@ -43,28 +44,32 @@
 
                     <li class="nav-item"><a href="location.html">聯絡我們</a></li>
 
-                    <ul class="top-icon">
-                        <li>
-                            <a href="#" class="btn-default">
-                                <i class="bi bi-search"></i>
-                            </a>
-                        </li>
-
-                        <li>
-                            <a href="#" class="btn-default">
-                                <i class="bi bi-cart"></i>
-                            </a>
-                        </li>
-
-                        <li>
-                            <a href="#" class="btn-default">
-                                <i class="bi bi-person"></i>
-                            </a>
-                        </li>
-                    </ul>
-
                 </ul>
             </section>
+              <!---------------three icon ---------------->
+            <ul class="hn-function flex-cc">
+                <li class="hn-search">
+                    <form action="#" class="desktop-search">
+                        <input type="text"  placeholder="找商品" name="search">
+                        <button type="submit">
+                            <i class="bi bi-search "></i>
+                        </button>
+                    </form>
+                    
+                </li>
+
+                <li>
+                    <a href="#" class="btn-default">
+                    <i class="bi bi-cart"></i>
+                    </a>
+                </li>
+
+                <li>
+                    <a href="#" class="btn-default">
+                    <i class="bi bi-person"></i>
+                    </a>
+                </li>
+            </ul>
         </div>
     </nav>
 
@@ -87,11 +92,19 @@
             <span>找產品</span>
 
         </div>
+        <div class="category-control">
+            <select>
+              <option value="suggest">推薦商品</option>
+              <option value="suggest">最新商品</option>
+              <option value="suggest">價格由低到高</option>
+              <option value="suggest">價格由高到低</option>
+            </select>
+        </div>
 
 
 
 
-        <div class="product-list">
+        <div class="product-list" data-aos="fade-up" data-aos-anchor-placement="top-bottom" data-aos-easing="linear">
 
 
             <div class="side-left">
@@ -322,9 +335,10 @@
 
         </div>
 
-        <a href="#">
+       <!---------------gotop--------------->
+        <button onClick="gotopfunction()" type="button" id="gotop">
             <i class="bi bi-arrow-up-circle"></i>
-        </a>
+        </button>
 
     </div>
 
@@ -408,6 +422,20 @@
 
     </footer>
     <script src="js/rwd.js"></script>
+    <script src="js/jquery.min.js"></script>
+    <script src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script>
+    <script>
+        AOS.init();
+    </script>
+    <script>
+           // 點擊回頂
+           $(document).ready(function () {
+            $(`#gotop`).click(function (e) {
+                // e.preventDefault();
+                $(`html,body`).animate({ scrollTop: 0 }, 900);
+            });
+        });
+    </script>
 
 
 
