--- a/index.html
+++ b/index.html
@@ -461,7 +461,7 @@
         <!---------------gotop--------------->
 
         <button onClick="gotopfunction()" type="button" id="gotop">
-            <i class="bi bi-arrow-up-circle"></i>
+            <i class="bi bi-arrow-up-circle-fill"></i>
         </button>
     </main>
 
@@ -568,6 +568,8 @@
             animateOut: 'fadeOut',
 
             autoplayHoverPause: true
+            
+            
         });
 
 
