--- a/product.html
+++ b/product.html
@@ -386,7 +386,7 @@
 
         <!---------------gotop--------------->
         <button onClick="gotopfunction()" type="button" id="gotop">
-            <i class="bi bi-arrow-up-circle"></i>
+            <i class="bi bi-arrow-up-circle-fill"></i>
         </button>
 
     </div>
